# my_ansible

./: .gitignore  README.md  nginx-install.yml  ping.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-devcontainer.yaml  publish-ghcr.yaml
