[tool.poetry]
name = "my-ansible-2024"
version = "0.1.0"
description = "This is my Python Ansible initial project"
authors = ["Tom Xu <tomxu@udel.edu>"]
license = "GPL-3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
ansible-core = "2.17.4"
ansible-lint = "^24.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
